lab1/test/fails/illegal_label_err4.asm
	.orig x1000
XLABEL .fill x1000
	.end